1.2 Release
- Changed version to 1.2
- Fixed some typos
- Added methode to create the JsonCreator with a JSON as string
- Made code better